--- a/package.json
+++ b/package.json
@@ -10,23 +10,20 @@
     "preview": "vite preview"
   },
   "dependencies": {
-    "@react-three/drei": "^9.120.5",
-    "@react-three/fiber": "^8.17.10",
-    "@react-three/xr": "^6.4.12",
-    "react": "^18.3.1",
-    "react-dom": "^18.3.1",
-    "three": "^0.172.0"
+    "@google/model-viewer": "^4.0.0",
+    "react": "^19.0.0",
+    "react-dom": "^18.3.1"
   },
   "devDependencies": {
     "@eslint/js": "^9.17.0",
     "@types/react": "^18.3.18",
     "@types/react-dom": "^18.3.5",
-    "@types/three": "^0.171.0",
     "@vitejs/plugin-react-swc": "^3.5.0",
     "eslint": "^9.17.0",
     "eslint-plugin-react-hooks": "^5.0.0",
     "eslint-plugin-react-refresh": "^0.4.16",
     "globals": "^15.14.0",
+    "terser": "^5.37.0",
     "typescript": "~5.6.2",
     "typescript-eslint": "^8.18.2",
     "vite": "^6.0.5"
